Add robustness against OAuth2 Token requests getting canceled.

OAuth2 token requests get canceled whenever new refresh tokens are
loaded. On Android this happens soon after startup and (on slow devices)
quite reliably cancels the requests for content suggestions.

This CL adds one retry in case the token request gets canceled.

BUG=632740

Review-Url: https://codereview.chromium.org/2239653002
Cr-Commit-Position: refs/heads/master@{#411325}

Former-commit-id: 36f23cf9e0aae1b88b19afab849ac4a7c80d5e80